--- a/Allen-Stimulus-Response/first_q2.ipynb
+++ b/Allen-Stimulus-Response/first_q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,46 @@
       "210       -0.130404       -0.356988  \n",
       "211        0.620877       -0.230405  \n",
       "\n",
+      "[212 rows x 10 columns]\n",
+      "     var_exp_vitmae_0  var_exp_vitmae_1  var_exp_vitmae_2  var_exp_vitmae_3  \\\n",
+      "0            0.088367         -0.021250         -0.023926         -0.005261   \n",
+      "1           -0.070950         -0.095125         -0.080525         -0.029496   \n",
+      "2           -0.086635         -0.108883          0.204169         -0.004970   \n",
+      "3           -0.026986         -0.020718         -0.017516         -0.058239   \n",
+      "4            0.228179          0.031509         -0.042608          0.419844   \n",
+      "..                ...               ...               ...               ...   \n",
+      "207          0.142753          0.001231         -0.031145          0.217106   \n",
+      "208         -0.039035         -0.050208         -0.006565         -0.033742   \n",
+      "209         -0.028818         -0.028852         -0.047261         -0.004894   \n",
+      "210          0.200595         -0.024740         -0.033272         -0.014761   \n",
+      "211         -0.021580         -0.035466         -0.006561         -0.056820   \n",
+      "\n",
+      "     var_exp_vitmae_4  var_exp_vitmae_5  var_exp_vitmae_6  var_exp_vitmae_7  \\\n",
+      "0           -0.057160          0.142109          0.108629         -0.065696   \n",
+      "1           -0.045603         -0.040204         -0.018493         -0.061822   \n",
+      "2           -0.008007         -0.011558          0.030633         -0.039065   \n",
+      "3           -0.011134         -0.042394         -0.077738         -0.037653   \n",
+      "4           -0.019886         -0.029363         -0.001053         -0.015496   \n",
+      "..                ...               ...               ...               ...   \n",
+      "207          0.047476          0.076169         -0.022083          0.084761   \n",
+      "208         -0.057597         -0.044960         -0.034172         -0.044583   \n",
+      "209         -0.021956          0.030615         -0.030462         -0.018459   \n",
+      "210         -0.020983         -0.013787         -0.020796         -0.060997   \n",
+      "211         -0.035852         -0.068981         -0.028597          0.013986   \n",
+      "\n",
+      "     var_exp_vitmae_8  var_exp_vitmae_9  \n",
+      "0            0.175241         -0.013398  \n",
+      "1           -0.042383         -0.016907  \n",
+      "2           -0.029598         -0.054527  \n",
+      "3            0.019300         -0.042694  \n",
+      "4            0.009907         -0.019015  \n",
+      "..                ...               ...  \n",
+      "207          0.008075          0.006168  \n",
+      "208          0.014079         -0.035093  \n",
+      "209          0.022389         -0.018164  \n",
+      "210          0.007511         -0.089834  \n",
+      "211          0.168259         -0.016872  \n",
+      "\n",
       "[212 rows x 10 columns]\n"
      ]
     }
@@ -106,8 +146,10 @@
    "source": [
     "clip_columns = dat.filter(regex='var_exp_clip_\\d+')\n",
     "dino_columns = dat.filter(regex='var_exp_dino_\\d+')\n",
+    "vitmae_columns = dat.filter(regex='var_exp_vitmae_\\d+')\n",
     "print(clip_columns)\n",
-    "print(dino_columns)"
+    "print(dino_columns)\n",
+    "print(vitmae_columns)"
    ]
   },
   {
@@ -119,8 +161,21 @@
     "import numpy as np\n",
     "mean_clip=np.mean(clip_columns,axis=1)\n",
     "mean_dino=np.mean(dino_columns,axis=1)\n",
-    "std_clip=np.std(clip_columns,axis=1)\n",
-    "std_dino=np.std(dino_columns,axis=1)"
+    "mean_vitmae=np.mean(dino_vitmae,axis=1)\n",
+    "std_clip=np.std(clip_columns,axis=1\n",
+    "                \n",
+    "std_dino=np.std(dino_columns,axis=1)\n",
+    "std_dino=np.std(dino_columns,axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(mean_clip, mean_vitmae)"
    ]
   },
   {
@@ -212,6 +267,23 @@
    ],
    "source": [
     "plt.scatter(std_clip,std_dino)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(212,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_clip.shape)"
    ]
   }
  ],
