--- a/Allen-Stimulus-Response/test.ipynb
+++ b/Allen-Stimulus-Response/test.ipynb
@@ -39,22 +39,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "visp_ecs = boc.get_experiment_containers(ids=[564425775])\n",
+    "exps = boc.get_ophys_experiments(experiment_container_ids=[visp_ecs])\n",
+    "print(exps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'id': 564425775,\n",
+       "  'imaging_depth': 175,\n",
+       "  'targeted_structure': 'VISl',\n",
+       "  'cre_line': 'Emx1-IRES-Cre',\n",
+       "  'reporter_line': 'Ai93(TITL-GCaMP6f)',\n",
+       "  'donor_name': '283147',\n",
+       "  'specimen_name': 'Emx1-IRES-Cre;Camk2a-tTA;Ai93-283147',\n",
+       "  'tags': [],\n",
+       "  'failed': False}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exps"
+    "visp_ecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<allensdk.core.brain_observatory_nwb_data_set.BrainObservatoryNwbDataSet at 0x7f483bfd3d00>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_set"
    ]
   },
   {
@@ -104,17 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cells.head()\n",
-    "my_cells = cells[cells['experiment_container_id'].isin([501559087])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -162,26 +199,206 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21044</th>\n",
+       "      <td>False</td>\n",
+       "      <td>VISl</td>\n",
+       "      <td>570926543</td>\n",
+       "      <td>Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>564425775</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.801374</td>\n",
+       "      <td>...</td>\n",
+       "      <td>556936638</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.16585</td>\n",
+       "      <td>0.13268</td>\n",
+       "      <td>177836119</td>\n",
+       "      <td>Emx1-IRES-Cre</td>\n",
+       "      <td>177837320.0</td>\n",
+       "      <td>Camk2a-tTA</td>\n",
+       "      <td>265943423</td>\n",
+       "      <td>Ai93(TITL-GCaMP6f)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21047</th>\n",
+       "      <td>False</td>\n",
+       "      <td>VISl</td>\n",
+       "      <td>570926568</td>\n",
+       "      <td>Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>564425775</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>556936638</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>177836119</td>\n",
+       "      <td>Emx1-IRES-Cre</td>\n",
+       "      <td>177837320.0</td>\n",
+       "      <td>Camk2a-tTA</td>\n",
+       "      <td>265943423</td>\n",
+       "      <td>Ai93(TITL-GCaMP6f)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21048</th>\n",
+       "      <td>False</td>\n",
+       "      <td>VISl</td>\n",
+       "      <td>570926576</td>\n",
+       "      <td>Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...</td>\n",
+       "      <td>0.692582</td>\n",
+       "      <td>564425775</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.364605</td>\n",
+       "      <td>0.609189</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>556936638</td>\n",
+       "      <td>0.404318</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>177836119</td>\n",
+       "      <td>Emx1-IRES-Cre</td>\n",
+       "      <td>177837320.0</td>\n",
+       "      <td>Camk2a-tTA</td>\n",
+       "      <td>265943423</td>\n",
+       "      <td>Ai93(TITL-GCaMP6f)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21049</th>\n",
+       "      <td>False</td>\n",
+       "      <td>VISl</td>\n",
+       "      <td>570926586</td>\n",
+       "      <td>Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>564425775</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>556936638</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>177836119</td>\n",
+       "      <td>Emx1-IRES-Cre</td>\n",
+       "      <td>177837320.0</td>\n",
+       "      <td>Camk2a-tTA</td>\n",
+       "      <td>265943423</td>\n",
+       "      <td>Ai93(TITL-GCaMP6f)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21051</th>\n",
+       "      <td>False</td>\n",
+       "      <td>VISl</td>\n",
+       "      <td>570926598</td>\n",
+       "      <td>Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...</td>\n",
+       "      <td>0.290527</td>\n",
+       "      <td>564425775</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.166913</td>\n",
+       "      <td>0.273796</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>556936638</td>\n",
+       "      <td>0.370169</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>177836119</td>\n",
+       "      <td>Emx1-IRES-Cre</td>\n",
+       "      <td>177837320.0</td>\n",
+       "      <td>Camk2a-tTA</td>\n",
+       "      <td>265943423</td>\n",
+       "      <td>Ai93(TITL-GCaMP6f)</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 60 columns</p>\n",
+       "<p>5 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [all_stim, area, cell_specimen_id, donor_full_genotype, dsi_dg, experiment_container_id, failed_experiment_container, g_dsi_dg, g_osi_dg, g_osi_sg, image_sel_ns, imaging_depth, osi_dg, osi_sg, p_dg, p_ns, p_run_mod_dg, p_run_mod_ns, p_run_mod_sg, p_sg, peak_dff_dg, peak_dff_ns, peak_dff_sg, pref_dir_dg, pref_image_ns, pref_ori_sg, pref_phase_sg, pref_sf_sg, pref_tf_dg, reliability_dg, reliability_nm1_a, reliability_nm1_b, reliability_nm1_c, reliability_nm2, reliability_nm3, reliability_ns, reliability_sg, rf_area_off_lsn, rf_area_on_lsn, rf_center_off_x_lsn, rf_center_off_y_lsn, rf_center_on_x_lsn, rf_center_on_y_lsn, rf_chi2_lsn, rf_distance_lsn, rf_overlap_index_lsn, run_mod_dg, run_mod_ns, run_mod_sg, sfdi_sg, specimen_id, tfdi_dg, time_to_peak_ns, time_to_peak_sg, tld1_id, tld1_name, tld2_id, tld2_name, tlr1_id, tlr1_name]\n",
-       "Index: []\n",
+       "       all_stim  area  cell_specimen_id  \\\n",
+       "21044     False  VISl         570926543   \n",
+       "21047     False  VISl         570926568   \n",
+       "21048     False  VISl         570926576   \n",
+       "21049     False  VISl         570926586   \n",
+       "21051     False  VISl         570926598   \n",
        "\n",
-       "[0 rows x 60 columns]"
+       "                                     donor_full_genotype    dsi_dg  \\\n",
+       "21044  Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...       NaN   \n",
+       "21047  Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...       NaN   \n",
+       "21048  Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...  0.692582   \n",
+       "21049  Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...       NaN   \n",
+       "21051  Emx1-IRES-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-GCaMP...  0.290527   \n",
+       "\n",
+       "       experiment_container_id  failed_experiment_container  g_dsi_dg  \\\n",
+       "21044                564425775                        False       NaN   \n",
+       "21047                564425775                        False       NaN   \n",
+       "21048                564425775                        False  0.364605   \n",
+       "21049                564425775                        False       NaN   \n",
+       "21051                564425775                        False  0.166913   \n",
+       "\n",
+       "       g_osi_dg  g_osi_sg  ...  specimen_id   tfdi_dg  time_to_peak_ns  \\\n",
+       "21044       NaN  0.801374  ...    556936638       NaN          0.16585   \n",
+       "21047       NaN       NaN  ...    556936638       NaN              NaN   \n",
+       "21048  0.609189       NaN  ...    556936638  0.404318              NaN   \n",
+       "21049       NaN       NaN  ...    556936638       NaN              NaN   \n",
+       "21051  0.273796       NaN  ...    556936638  0.370169              NaN   \n",
+       "\n",
+       "       time_to_peak_sg    tld1_id      tld1_name      tld2_id   tld2_name  \\\n",
+       "21044          0.13268  177836119  Emx1-IRES-Cre  177837320.0  Camk2a-tTA   \n",
+       "21047              NaN  177836119  Emx1-IRES-Cre  177837320.0  Camk2a-tTA   \n",
+       "21048              NaN  177836119  Emx1-IRES-Cre  177837320.0  Camk2a-tTA   \n",
+       "21049              NaN  177836119  Emx1-IRES-Cre  177837320.0  Camk2a-tTA   \n",
+       "21051              NaN  177836119  Emx1-IRES-Cre  177837320.0  Camk2a-tTA   \n",
+       "\n",
+       "         tlr1_id           tlr1_name  \n",
+       "21044  265943423  Ai93(TITL-GCaMP6f)  \n",
+       "21047  265943423  Ai93(TITL-GCaMP6f)  \n",
+       "21048  265943423  Ai93(TITL-GCaMP6f)  \n",
+       "21049  265943423  Ai93(TITL-GCaMP6f)  \n",
+       "21051  265943423  Ai93(TITL-GCaMP6f)  \n",
+       "\n",
+       "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_cells"
+    "cells.head()\n",
+    "my_cells = cells[cells['experiment_container_id'].isin([564425775])]\n",
+    "my_cells.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "347"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_cells)"
    ]
   },
   {
