--- a/Allen-Clean-Code/quick_check.ipynb
+++ b/Allen-Clean-Code/quick_check.ipynb
@@ -2,13 +2,144 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    three_session_A_dino_natural_movie_one_0  \\\n",
+      "0                                   0.721595   \n",
+      "1                                   0.020166   \n",
+      "2                                   0.941035   \n",
+      "3                                  -0.329269   \n",
+      "4                                  -0.125855   \n",
+      "..                                       ...   \n",
+      "58                                  0.850972   \n",
+      "59                                  0.025356   \n",
+      "60                                  0.814698   \n",
+      "61                                 -0.474030   \n",
+      "62                                  0.733754   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_1  \\\n",
+      "0                                   0.859637   \n",
+      "1                                  -0.202233   \n",
+      "2                                  -0.369833   \n",
+      "3                                  -0.085723   \n",
+      "4                                  -0.283803   \n",
+      "..                                       ...   \n",
+      "58                                  0.788430   \n",
+      "59                                  0.770983   \n",
+      "60                                 -0.375893   \n",
+      "61                                  0.343184   \n",
+      "62                                  0.105289   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_2  \\\n",
+      "0                                   0.264611   \n",
+      "1                                  -0.256474   \n",
+      "2                                  -0.236357   \n",
+      "3                                  -0.234630   \n",
+      "4                                  -0.324106   \n",
+      "..                                       ...   \n",
+      "58                                 -0.136223   \n",
+      "59                                  0.791036   \n",
+      "60                                  0.660786   \n",
+      "61                                 -0.257280   \n",
+      "62                                 -0.086412   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_3  \\\n",
+      "0                                   0.689130   \n",
+      "1                                  -0.155639   \n",
+      "2                                  -0.007793   \n",
+      "3                                  -0.197107   \n",
+      "4                                  -0.243288   \n",
+      "..                                       ...   \n",
+      "58                                  0.092569   \n",
+      "59                                 -0.193171   \n",
+      "60                                  0.534532   \n",
+      "61                                  0.612803   \n",
+      "62                                  0.269272   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_4  \\\n",
+      "0                                  -0.074912   \n",
+      "1                                  -0.280182   \n",
+      "2                                  -0.065944   \n",
+      "3                                  -0.143118   \n",
+      "4                                  -0.241476   \n",
+      "..                                       ...   \n",
+      "58                                  0.259361   \n",
+      "59                                  0.673927   \n",
+      "60                                 -0.343093   \n",
+      "61                                  0.686840   \n",
+      "62                                  0.340655   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_5  \\\n",
+      "0                                   0.219807   \n",
+      "1                                   0.033553   \n",
+      "2                                   0.255712   \n",
+      "3                                  -0.169635   \n",
+      "4                                  -0.135475   \n",
+      "..                                       ...   \n",
+      "58                                  0.452819   \n",
+      "59                                  0.151536   \n",
+      "60                                  0.634811   \n",
+      "61                                  0.488849   \n",
+      "62                                  0.006128   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_6  \\\n",
+      "0                                   0.465955   \n",
+      "1                                   0.180619   \n",
+      "2                                  -0.073282   \n",
+      "3                                  -0.275217   \n",
+      "4                                  -0.289868   \n",
+      "..                                       ...   \n",
+      "58                                  0.555712   \n",
+      "59                                  0.527494   \n",
+      "60                                  0.767458   \n",
+      "61                                  0.056814   \n",
+      "62                                  0.163642   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_7  \\\n",
+      "0                                   0.622092   \n",
+      "1                                  -0.212236   \n",
+      "2                                  -0.085039   \n",
+      "3                                  -0.158048   \n",
+      "4                                  -0.155039   \n",
+      "..                                       ...   \n",
+      "58                                  0.476470   \n",
+      "59                                  0.495503   \n",
+      "60                                  0.805538   \n",
+      "61                                  0.127165   \n",
+      "62                                  0.590128   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_8  \\\n",
+      "0                                  -0.204816   \n",
+      "1                                  -0.066526   \n",
+      "2                                  -0.133693   \n",
+      "3                                   0.258636   \n",
+      "4                                  -0.303362   \n",
+      "..                                       ...   \n",
+      "58                                  0.617634   \n",
+      "59                                 -0.075905   \n",
+      "60                                 -0.383979   \n",
+      "61                                  0.335159   \n",
+      "62                                 -0.053416   \n",
+      "\n",
+      "    three_session_A_dino_natural_movie_one_9  \n",
+      "0                                  -0.165167  \n",
+      "1                                  -0.176264  \n",
+      "2                                   0.467576  \n",
+      "3                                  -0.199672  \n",
+      "4                                  -0.251831  \n",
+      "..                                       ...  \n",
+      "58                                  0.685300  \n",
+      "59                                 -0.082517  \n",
+      "60                                  0.660440  \n",
+      "61                                 -0.272247  \n",
+      "62                                  0.022191  \n",
+      "\n",
+      "[63 rows x 10 columns]\n",
       "0     0.339793\n",
       "1    -0.111522\n",
       "2     0.069238\n",
@@ -57,6 +188,7 @@
     "    session_A_df = filtered_columns.filter(like='three_session_A')\n",
     "    session_B_df=filtered_columns.filter(like='three_session_B')\n",
     "    session_C_df=filtered_columns.filter(like='three_session_C')\n",
+    "    print(session_A_df)\n",
     "\n",
     "    # Calculate the mean for each row\n",
     "    row_means_A = session_A_df.mean(axis=1)\n",
@@ -181,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +324,198 @@
        },
        "data": [
         {
-         "hovertemplate": "Mean for three_session_A=%{x}<br>Mean for three_session_B=%{y}<br>Mean for three_session_C=%{z}<extra></extra>",
+         "customdata": [
+          [
+           517473341
+          ],
+          [
+           587377582
+          ],
+          [
+           517473255
+          ],
+          [
+           517471959
+          ],
+          [
+           587377204
+          ],
+          [
+           517472724
+          ],
+          [
+           517474437
+          ],
+          [
+           517472450
+          ],
+          [
+           517471794
+          ],
+          [
+           517472454
+          ],
+          [
+           517471803
+          ],
+          [
+           587377211
+          ],
+          [
+           517472684
+          ],
+          [
+           517472677
+          ],
+          [
+           517474020
+          ],
+          [
+           517473991
+          ],
+          [
+           517474002
+          ],
+          [
+           517473980
+          ],
+          [
+           517473967
+          ],
+          [
+           587377006
+          ],
+          [
+           517472903
+          ],
+          [
+           517472900
+          ],
+          [
+           517472462
+          ],
+          [
+           517474415
+          ],
+          [
+           517472135
+          ],
+          [
+           517473304
+          ],
+          [
+           517473313
+          ],
+          [
+           517474121
+          ],
+          [
+           517473080
+          ],
+          [
+           517473947
+          ],
+          [
+           517472207
+          ],
+          [
+           517472141
+          ],
+          [
+           517472470
+          ],
+          [
+           587377518
+          ],
+          [
+           517473926
+          ],
+          [
+           517473957
+          ],
+          [
+           517473360
+          ],
+          [
+           517473364
+          ],
+          [
+           517472157
+          ],
+          [
+           517472162
+          ],
+          [
+           517472197
+          ],
+          [
+           587376617
+          ],
+          [
+           587376610
+          ],
+          [
+           517473369
+          ],
+          [
+           517473374
+          ],
+          [
+           517474430
+          ],
+          [
+           517474423
+          ],
+          [
+           517472916
+          ],
+          [
+           517472909
+          ],
+          [
+           517474444
+          ],
+          [
+           517472925
+          ],
+          [
+           517472981
+          ],
+          [
+           517472922
+          ],
+          [
+           517472708
+          ],
+          [
+           517472720
+          ],
+          [
+           517471925
+          ],
+          [
+           517471919
+          ],
+          [
+           517472716
+          ],
+          [
+           517472913
+          ],
+          [
+           517472553
+          ],
+          [
+           517472906
+          ],
+          [
+           517471778
+          ],
+          [
+           517473350
+          ]
+         ],
+         "hovertemplate": "Mean for three_session_A=%{x}<br>Mean for three_session_B=%{y}<br>Mean for three_session_C=%{z}<br>cell_ids=%{customdata[0]}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#636efa",
@@ -1265,6 +1588,8 @@
     "    # Use regex to filter columns containing 'dino_natural_movie_one'\n",
     "    filtered_columns = dataframe.filter(regex='dino_natural_movie_one')\n",
     "\n",
+    "    neuron_ids=dataframe['cell_ids']\n",
+    "\n",
     "    # Further filter columns based on 'three_session_A', 'three_session_B', 'three_session_C'\n",
     "    session_A_df = filtered_columns.filter(like='three_session_A')\n",
     "    session_B_df = filtered_columns.filter(like='three_session_B')\n",
@@ -1276,11 +1601,11 @@
     "    row_means_C = session_C_df.mean(axis=1)\n",
     "\n",
     "    # Create a DataFrame for the means\n",
-    "    means_df = pd.DataFrame({'Mean_A': row_means_A, 'Mean_B': row_means_B, 'Mean_C': row_means_C})\n",
+    "    means_df = pd.DataFrame({'Mean_A': row_means_A, 'Mean_B': row_means_B, 'Mean_C': row_means_C, 'cell_ids':neuron_ids})\n",
     "\n",
     "    # Create a 3D scatter plot with Plotly\n",
     "    fig = px.scatter_3d(means_df, x='Mean_A', y='Mean_B', z='Mean_C', labels={'Mean_A': 'Mean for three_session_A', 'Mean_B': 'Mean for three_session_B', 'Mean_C': 'Mean for three_session_C'},\n",
-    "                        title='3D Scatter Plot of Means')\n",
+    "                        title='3D Scatter Plot of Means',hover_data={'cell_ids': True})\n",
     "    \n",
     "    # Show the plot\n",
     "    fig.show()\n",
