save regression directions

--- a/Allen-Clean-Code/quick_check.ipynb
+++ b/Allen-Clean-Code/quick_check.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
            517473350
           ]
          ],
-         "hovertemplate": "Mean for three_session_A=%{x}<br>Mean for three_session_B=%{y}<br>Mean for three_session_C=%{z}<br>cell_ids=%{customdata[0]}<extra></extra>",
+         "hovertemplate": "Mean var exp for movie one=%{x}<br>Mean var exp for movie two=%{y}<br>Mean var exp for movie three=%{z}<br>cell_ids=%{customdata[0]}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#636efa",
@@ -527,199 +527,199 @@
          "showlegend": false,
          "type": "scatter3d",
          "x": [
-          0.33979313356738305,
-          -0.11152151182073289,
-          0.06923823147886385,
-          -0.15337846600899657,
-          -0.23541038392154942,
-          -0.24449261058128052,
-          -0.04794499029759149,
-          0.6657353092802454,
-          -0.15908830294372503,
-          -0.26078383916127706,
-          -0.20572668837459257,
-          -0.10410955645648687,
-          -0.012657693633497166,
-          0.027217232303761173,
-          0.678141597725264,
-          -0.12223708170820483,
-          -0.2038891855194797,
-          -0.13222209526363557,
-          0.4077690156841635,
-          0.3261796571689749,
-          -0.26690382524026285,
-          -0.10243002718042626,
-          0.6149575023953211,
-          0.31338662704578274,
-          -0.11614449121596346,
-          -0.13806655927979933,
-          0.17074430889473677,
-          -0.03165993503524378,
-          -0.2897100285791557,
-          -0.06051604447809724,
-          -0.022291174337734566,
-          0.9456812678500501,
-          0.08828297511586267,
-          -0.13752338157712976,
-          -0.1819403249158728,
-          -0.20799794765506058,
-          0.07094191918973518,
-          0.10743566410211705,
-          -0.05613204079115375,
-          0.2701583067045711,
-          -0.0787400769813239,
-          -0.239832954804388,
-          -0.01930900101360713,
-          0.7717659714805272,
-          0.03308637079613708,
-          0.18480489863818894,
-          0.025026727916449026,
-          0.9013811379097948,
-          -0.06439439063809278,
-          -0.1201403591142752,
-          -0.3528676842755023,
-          0.21016481566814843,
-          -0.17683292741942086,
-          0.18693931828167737,
-          0.792239725602842,
-          0.2970113728153096,
-          0.2046304767552698,
-          -0.1432726359370787,
-          0.46430449350063385,
-          0.30842426303515436,
-          0.37752973793097144,
-          0.16472574916448202,
-          0.20912314653414352
+          0.15885048896643178,
+          0.20230879419699357,
+          0.168316055924879,
+          -0.028479300853249234,
+          -0.09269025364024432,
+          -0.13555073515100396,
+          0.0838206017402024,
+          0.6328038752673277,
+          0.2384283766513859,
+          -0.11530567538494098,
+          0.019044990278201886,
+          0.0706293848895433,
+          0.32970583835119166,
+          0.3667830270506098,
+          0.6088333573196959,
+          0.07429901506357442,
+          -0.10228506943901547,
+          -0.09775903002141792,
+          0.5006966147248566,
+          0.2951269021723359,
+          -0.17202776693758196,
+          -0.0364777149678815,
+          0.5577433324358806,
+          0.4996046044902517,
+          0.2780924783899995,
+          -0.05485345899901403,
+          0.4203671058007646,
+          0.003964671781570847,
+          -0.1227253347274449,
+          0.07988651595821891,
+          -0.01671534693345624,
+          0.8595835129221414,
+          0.0019896682439983354,
+          -0.01594514050376132,
+          -0.07902858918248337,
+          -0.08629053070406141,
+          0.05626561824582827,
+          0.1954636822035835,
+          -0.010023963145505058,
+          0.2979310087110247,
+          0.3436768978375869,
+          0.012135344418423094,
+          -0.05382950521035105,
+          0.6201121028973583,
+          0.4595103205955002,
+          0.5067967374660254,
+          0.08986253866099145,
+          0.7802621074543954,
+          0.12166083675571712,
+          0.08261426550291238,
+          -0.13205435788674624,
+          0.212022191743439,
+          -0.12890568400630137,
+          0.11793505989110495,
+          0.8224351362336271,
+          0.49153971784049183,
+          0.39355228977122714,
+          0.10511595272127401,
+          0.6054611287940975,
+          0.31213782419394653,
+          0.5945467122360097,
+          0.11732315742406166,
+          0.28357545050167776
          ],
          "y": [
-          -0.022758275914827385,
-          0.41553196226320566,
-          0.3972611708895301,
-          0.10526398018562,
-          -0.09941386500661734,
-          -0.17623961995189916,
-          -0.10246835960618528,
-          0.7172722341003759,
-          0.6087972755430985,
-          -0.181573474161974,
-          -0.2018421854463308,
-          -0.06592461114976182,
-          0.1553034997143866,
-          0.4114722836893934,
-          0.5348985391574222,
-          0.3790142781905485,
-          -0.19959632368792712,
-          -0.1423069920120735,
-          0.4710537763382027,
-          0.03541564269880883,
-          -0.1543396392165199,
-          -0.12634871900932865,
-          0.5152443826254676,
-          0.6452368472363819,
-          0.5034895319745247,
-          -0.07224318651779785,
-          0.578027710054178,
-          0.04619115467900912,
-          -0.20627162192516443,
-          0.4014087020251297,
-          -0.06994493014934719,
-          0.9397178760588876,
-          -0.09379811214498683,
-          -0.15940792223350342,
-          -0.10285254682663576,
-          -0.02461008054141007,
-          -0.0999706716556081,
-          0.10144706380017068,
-          -0.09734825136521079,
-          0.5950237976236193,
-          0.4492375554256693,
-          -0.004181057971063595,
-          -0.03773221168065221,
-          0.39866220893543597,
-          0.5088754399939739,
-          0.6608942338064291,
-          0.12829581434783008,
-          0.9086676631725176,
-          0.31346102973639123,
-          0.2343093457673897,
-          -0.026813224138329917,
-          0.16998795993181628,
-          -0.21148743985889507,
-          0.057860364085378466,
-          0.801380722967483,
-          0.4091599235673035,
-          0.6515938973534647,
-          0.363519461875154,
-          0.7643385147301419,
-          0.1065132291184685,
-          0.6047769092534355,
-          -0.27601519847403183,
-          0.10516052887694041
+          0.04501989174960072,
+          0.3251754460512186,
+          0.013022312154700464,
+          -0.1776013492224679,
+          0.2074325026390918,
+          -0.13094512323850865,
+          0.3531452954917415,
+          0.0984405920907457,
+          0.1230560560924632,
+          0.02793600046122996,
+          0.007725498286739107,
+          0.3120448939081841,
+          0.8575819299464056,
+          0.4575525933606885,
+          0.5965414475761126,
+          -0.14023953356635802,
+          -0.04117086928624801,
+          -0.0623481441058242,
+          0.31868607442927827,
+          0.2243590560337642,
+          -0.22388217825679946,
+          -0.031657415661114525,
+          0.43543146788165227,
+          0.5956733370948726,
+          0.18035945816063198,
+          -0.06477989868768219,
+          0.351449238501879,
+          -0.07614421125137308,
+          -0.07824030920509725,
+          -0.22468685314752332,
+          0.03353566981395738,
+          0.3326158298181291,
+          -0.06852275087944551,
+          -0.04541619011201799,
+          0.11755821669483454,
+          -0.1280728346670877,
+          0.2235726727050531,
+          0.2152811567440558,
+          -0.006240649727058867,
+          0.49232295164908174,
+          0.6710394549624886,
+          0.4908955197616807,
+          -0.16281666697425284,
+          0.47869437998477216,
+          0.829752967579562,
+          0.6633080552996321,
+          0.40193122604283654,
+          0.6721743076179999,
+          0.01606447891693773,
+          0.24101829917433043,
+          -0.015173452072811632,
+          -0.18836810609405719,
+          0.2455644942796973,
+          -0.14782689116809963,
+          0.3598549610780455,
+          0.8059364251343094,
+          0.7810085739016412,
+          0.008662809526739933,
+          0.6982323754358232,
+          0.06356428890588392,
+          0.8035819868898859,
+          0.13670609724701518,
+          0.02148245606497765
          ],
          "z": [
-          0.1641585683239859,
-          0.2725443180054174,
-          0.08479710138087496,
-          -0.09504384379380995,
-          0.05948702145231116,
-          -0.03709308471183885,
-          0.41528859009984,
-          0.618894742918063,
-          0.3514503833049084,
-          0.017263493779020832,
-          0.4168591536259215,
-          0.34295378458345205,
-          0.8613909015506845,
-          0.6583825631482038,
-          0.8666783058085861,
-          -0.04659542755991983,
-          0.03324677434912153,
-          -0.04081541353504088,
-          0.6504237947889969,
-          0.5544470853125396,
-          -0.253074223136434,
-          0.05870414290232619,
-          0.6451774514180892,
-          0.7110275966716093,
-          0.48077712325249344,
-          -0.08186781921941974,
-          0.6346601062477634,
-          -0.04690038516003347,
-          -0.0012232249122679062,
-          -0.13387903468061152,
-          -0.012990399538137711,
-          0.8219821979974542,
-          0.04135825635331981,
-          0.277163298112032,
-          -0.01570341819205303,
-          -0.11212967051221656,
-          0.19720044048702196,
-          0.4913680813152025,
-          0.15272610186267707,
-          0.030092003632242136,
-          0.7089740361217645,
-          0.2881322639042753,
-          -0.11824336846174084,
-          0.758922976110026,
-          0.8909479342840273,
-          0.7872083434295308,
-          0.09970002473231024,
-          0.6282661209790692,
-          0.08581786703996874,
-          0.17537983677148888,
-          -0.1472028517141897,
-          0.24892685831781428,
-          -0.019692909686942588,
-          0.07063711047643154,
-          0.8915250803613679,
-          0.8270332300308348,
-          0.3357989536610836,
-          0.09429419470553217,
-          0.7388871133392381,
-          0.6250062732321979,
-          0.882300904178315,
-          0.3737511567582187,
-          0.5738416303491403
+          0.02573190426477597,
+          0.10288803256205784,
+          0.12605389117482751,
+          -0.14000195852168354,
+          -0.06635145154287159,
+          0.12446263795629205,
+          0.20872408393540506,
+          -0.0805601542423384,
+          0.14457381582918943,
+          -0.11860013640907756,
+          0.4139614424417812,
+          0.19829040683538773,
+          0.2606025147529098,
+          0.35285513367585963,
+          0.12398661837703455,
+          0.2781700789783962,
+          -0.009176345042089551,
+          -0.1562886941952774,
+          0.19105876968289243,
+          0.5679451545173577,
+          0.21351666463803914,
+          -0.08622178323626317,
+          0.26932913269162573,
+          0.5150004767918757,
+          0.10747498028794875,
+          0.04535093355034928,
+          0.1573734425081797,
+          0.39266597196311986,
+          -0.11324772505500971,
+          0.24709566314894577,
+          0.49098594088288455,
+          0.41918369113916787,
+          -0.15492249221428073,
+          -0.09757153523219556,
+          0.07498520763647362,
+          0.09295668813053178,
+          0.26137958876480727,
+          -0.05791072495411975,
+          -0.12410830718908246,
+          0.6990338341751571,
+          0.011611032137145616,
+          0.18354795470285773,
+          -0.07711836970271727,
+          0.5648415922875236,
+          0.4852681765501913,
+          0.49373568669920953,
+          0.31448939267790743,
+          0.7409250737711877,
+          0.08871546781263988,
+          -0.06763889467212753,
+          0.025023037616415687,
+          0.06236758115291471,
+          0.18360893961516017,
+          -0.14823771653399917,
+          0.5791253350039793,
+          0.3539738248697822,
+          0.5165455398650811,
+          0.005353555560799883,
+          0.6230826117036347,
+          0.5522834527507563,
+          0.3797407762822946,
+          -0.003153962004841075,
+          0.2873069924394895
          ]
         }
        ],
@@ -740,17 +740,17 @@
          },
          "xaxis": {
           "title": {
-           "text": "Mean for three_session_A"
+           "text": "Mean var exp for movie one"
           }
          },
          "yaxis": {
           "title": {
-           "text": "Mean for three_session_B"
+           "text": "Mean var exp for movie two"
           }
          },
          "zaxis": {
           "title": {
-           "text": "Mean for three_session_C"
+           "text": "Mean var exp for movie three"
           }
          }
         },
@@ -1571,7 +1571,7 @@
          }
         },
         "title": {
-         "text": "3D Scatter Plot of Means"
+         "text": "3D Scatter Plot of Mean Variance Explained Across Stimuli"
         }
        }
       }
@@ -1586,14 +1586,14 @@
     "\n",
     "def plot_3d_mean(dataframe):\n",
     "    # Use regex to filter columns containing 'dino_natural_movie_one'\n",
-    "    filtered_columns = dataframe.filter(regex='dino_natural_movie_one')\n",
+    "    filtered_columns = dataframe.filter(regex='vit')\n",
     "\n",
     "    neuron_ids=dataframe['cell_ids']\n",
     "\n",
     "    # Further filter columns based on 'three_session_A', 'three_session_B', 'three_session_C'\n",
-    "    session_A_df = filtered_columns.filter(like='three_session_A')\n",
-    "    session_B_df = filtered_columns.filter(like='three_session_B')\n",
-    "    session_C_df = filtered_columns.filter(like='three_session_C')\n",
+    "    session_A_df = filtered_columns.filter(like='natural_movie_one')\n",
+    "    session_B_df = filtered_columns.filter(like='natural_movie_two')\n",
+    "    session_C_df = filtered_columns.filter(like='natural_movie_three')\n",
     "\n",
     "    # Calculate the mean for each row\n",
     "    row_means_A = session_A_df.mean(axis=1)\n",
@@ -1604,14 +1604,23 @@
     "    means_df = pd.DataFrame({'Mean_A': row_means_A, 'Mean_B': row_means_B, 'Mean_C': row_means_C, 'cell_ids':neuron_ids})\n",
     "\n",
     "    # Create a 3D scatter plot with Plotly\n",
-    "    fig = px.scatter_3d(means_df, x='Mean_A', y='Mean_B', z='Mean_C', labels={'Mean_A': 'Mean for three_session_A', 'Mean_B': 'Mean for three_session_B', 'Mean_C': 'Mean for three_session_C'},\n",
-    "                        title='3D Scatter Plot of Means',hover_data={'cell_ids': True})\n",
+    "    fig = px.scatter_3d(means_df, x='Mean_A', y='Mean_B', z='Mean_C', labels={'Mean_A': 'Mean var exp for movie one', 'Mean_B': 'Mean var exp for movie two', 'Mean_C': 'Mean var exp for movie three'},\n",
+    "                        title='3D Scatter Plot of Mean Variance Explained Across Stimuli',hover_data={'cell_ids': True})\n",
     "    \n",
     "    # Show the plot\n",
     "    fig.show()\n",
     "\n",
     "\n",
     "plot_3d_mean(merged_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_id=517472141"
    ]
   }
  ],
