--- a/Allen-Clean-Code/quick_check.ipynb
+++ b/Allen-Clean-Code/quick_check.ipynb
@@ -1601,7 +1601,7 @@
     "    row_means_C = session_C_df.mean(axis=1)\n",
     "\n",
     "    # Create a DataFrame for the means\n",
-    "    means_df = pd.DataFrame({'Mean_A': row_means_A, 'Mean_B': row_means_B, 'Mean_C': row_means_C, 'cell_ids':neuron_ids})\n",
+    "    means_df = pd.DataFrame({'Mean_A': row_means_A, 'Mean_B': row_means_B, 'Mean_C': row_means_C, 'cell_ids':neuron_ids, 'inds':dataframe.index })\n",
     "\n",
     "    # Create a 3D scatter plot with Plotly\n",
     "    fig = px.scatter_3d(means_df, x='Mean_A', y='Mean_B', z='Mean_C', labels={'Mean_A': 'Mean var exp for movie one', 'Mean_B': 'Mean var exp for movie two', 'Mean_C': 'Mean var exp for movie three'},\n",
